Adicionado conteúdo inicial e aplicado estilos Adicionado as seções contendo principais conteúdos e também as seções de imagem. Foi aplicado estilo juntamente.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LOGOTYPE - Backpacking with comfort!</title>
+    <title>LOGOTYPE - Lorem Ipsum</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>LOGO<span class="half-logo">TYPE</span></h1> 
+    <header>
+        <h1>LOGO<span class="half-logo">TYPE</span></h1>
+        <nav>
+            <ul>
+                <li><a href="#">home</a></li>
+                <li><a href="#">about</a></li>
+                <li><a href="#">store</a></li>
+                <li><a href="#">contact us</a></li>
+                <li><a href="#">blog</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section class="first-section">
+        <img src="images/svg-image-one.svg" class="svg-one">
+        <div class="main-info">
+            <h2>COMFORT ON A BACKPACKING TRIP</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut dolore suscipit eligendi. Sapiente?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+    </section>
+
+    <section class="first-img">
+
+    </section>
+
+    <section class="second-section">
+        <div class="second-info">
+            <h2>HIKING AND HAPPINESS</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut dolore suscipit eligendi. Sapiente?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+        <img src="images/svg-image-two.svg" class="svg-two">
+    </section>
+
+    <section class="second-img">
+
+    </section>
 </body>
 </html>
