Finalizando projeto Adicionado sessão com botão para acessar blog e footer. Pendente versão mobile

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </section>
 
     <section class="first-img">
-
+        <h2>Lorem ipsum dolor sit.</h2>
     </section>
 
     <section class="second-section">
@@ -43,7 +43,18 @@
     </section>
 
     <section class="second-img">
-
+        <h2>Lorem ipsum dolor sit amet consectetur.</h2>
     </section>
+
+    <section class="blog-bttn">
+        <div class="container-bttn">
+            <h2>Visit our blog!</h2>
+            <button class="bttn">Blog</button>
+        </div>
+    </section>
+
+    <footer>
+        <p>Copyright &copy; Brandão, Caio 2023</p>
+    </footer>
 </body>
 </html>
